maze.lessons.maze.island.IslandMaze.scala.error
Escaper:27: error: type mismatch;
 found   : Unit
 required: Boolean
	if (x=5) {
             ^